--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -872,7 +872,7 @@ CreatLeadScreen As screen:
                             ,
                             Set(
                                 VarIndicatorUS,
-                                false
+                                true
                             );
                             Set(
                                 VarIndicator,
