--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -389,7 +389,7 @@ UnitScreen As screen:
                 AlignInContainer: =AlignInContainer.Center
                 DataSource: =LeadInformations
                 FillPortions: =0
-                Height: =UnitCount.Height+UnitDescription.Height+40
+                Height: =If(UnitCount.Height+UnitDescription.Height=0,300,UnitCount.Height+UnitDescription.Height+40)
                 Item: =VarFormMode
                 LayoutMinHeight: =250
                 LayoutMinWidth: =Parent.Width
