--- a/QuantumQQTeamApp/Src/App.fx.yaml
+++ b/QuantumQQTeamApp/Src/App.fx.yaml
@@ -29,7 +29,8 @@ App As appinfo:
                     0,
                     0,
                     1
-                )
+                ),
+                SHRed:RGBA(220,0,0,1)
               //  HeaderFontSize: 26,
               //  FontWeight: "bold",
               //  HeaderUserFontSize: 16
